--- a/Portfolio__Using HTML CSS n JS/index.html
+++ b/Portfolio__Using HTML CSS n JS/index.html
@@ -36,9 +36,9 @@
           dolorem?
         </p>
         <div class="social-icons">
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="https://pk.linkedin.com/in/roman-ayub-khan-025877316"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/romankhan26"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/romankhan.26"><i class="bx bxl-instagram-alt"></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
         </div>
 
@@ -227,7 +227,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
-      <form action="">
+      <form action="" method="post">
         <div class="input-group">
           <div class="input-box">
             <input type="text" placeholder="Full Name" />
@@ -254,9 +254,9 @@
 
     <footer class="footer">
       <div class="social">
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="https://pk.linkedin.com/in/roman-ayub-khan-025877316"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/romankhan26"><i class="bx bxl-github"></i></a>
+        <a href="https://www.instagram.com/romankhan.26/"><i class="bx bxl-instagram-alt"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
 
@@ -264,7 +264,7 @@
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="Mailto:romankhan.26@outlook.com">Contact</a></li>
         <li><a href="#">Testimonials</a></li>
       </ul>
       <p class="copyright">
